2008-07-13  Sam Steingold  <sds@gnu.org>

	* encoding.d (base64_wcstombs): set CHARSET-TYPE-ERROR slots DATUM
	and EXPECTED-TYPE
	(error_incomplete, error_uni32_invalid, error_utf8_invalid1)
	(error_utf8_invalid2, error_utf8_invalid3, error_utf8_invalid4)
	(error_nls_invalid): signal CHARSET-TYPE-ERROR instead of ERROR
	(base64_wcstombs, error_unencodable, error_incomplete)
	(error_uni32_invalid, error_utf8_invalid1, error_utf8_invalid2)
	(error_utf8_invalid3, error_utf8_invalid4): print the caller

2008-07-13  Sam Steingold  <sds@gnu.org>

	* init.lisp (search-file): list matching files from the FIRST
	directory containing any matching file, because otherwise every
	load will mean a full traversal of ~/lisp/**/

2008-07-13  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (*load-logical-pathname-translations-database*):
	since SEARCH-FILE now handles both files and directories
	similarly, only one element is needed
	(load-logical-pathname-translations): updated for the search-file
	changes: when the search finds a directory, it is returned as is
	instead of its contents
	* init.lisp (search-file): EXTENSIONS is optional, also accept KEEP-DIRS
	(load): pass KEEP-DIRS=NIL to search-file

2008-07-13  Sam Steingold  <sds@gnu.org>

	* pathname.d (error_file_stream_unnamed, error_dir_not_exists)
	(error_noname, error_notdir): print caller
	(FILE-NAMESTRING, DIRECTORY-NAMESTRING, ABSOLUTE-PATHNAME)
	(physical_namestring): simplify code

2008-07-12  Sam Steingold  <sds@gnu.org>

	* pathname.d (classify_namestring): extracted from check_sub_directory
	(check_sub_directory): remove
	(directory_search_1subdir): use classify_namestring instead
	(PROBE-PATHNAME): also return the physical pathname as the 2nd value
	* init.lisp (ppn-fwd): use the second value of PROBE-PATHNAME
	* win32.d (MAXPATHLEN): define (needed for classify_namestring)

2008-07-12  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (ThePackage_, ThePathname_) [DEBUG_SPVW]: add
